# MosaicQueen

./: .travis.yml  CHANGES.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
.travis/: mypy.docker  pep8.docker  py2.docker  py3.docker
MosaicSteward/: image_convolver.py  main.py  make_mosaic.py
MosaicSteward.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
montage_mosaic/: __init__.py  main.py  make_mosaic.py
montage_mosaic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mosaicQueen/: __init__.py  main.py  make_mosaic.py
mosaicqueen/: main.py  make_mosaic.py
mosiacQueen/: main.py  make_mosaic.py
